--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,16 +1,17 @@
-<phpunit
-    bootstrap="./vendor/autoload.php"
-    colors="true"
-    backupGlobals="false"
->
+<?xml version="1.0" encoding="UTF-8"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+         bootstrap="vendor/autoload.php"
+         colors="true">
     <testsuites>
-        <testsuite name="DoctrineModule Test Suite">
-            <directory>./tests/DoctrineModuleTest</directory>
+        <testsuite name="doctrine-zend-validator">
+            <directory>./test</directory>
         </testsuite>
     </testsuites>
+
     <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./src</directory>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
 </phpunit>
